# chipflow-test-socs

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
fibonacci/design/steps/: silicon.py
rom/: chipflow.toml
rom/design/: design.py
rom/design/steps/: silicon.py
sram/: chipflow.toml
sram/design/: design.py
sram/design/steps/: silicon.py
test_socs_common/: silicon.py
upcounter/: chipflow.toml
upcounter/design/: design.py
upcounter/design/steps/: silicon.py
