# Project metadata

[project]
name = "chipflow-test-socs"
version = "0.0.0"
description = "ChipFlow test designs"
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io>" },
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io>" },
    {name = "Serge Rabyking", email = "serge.rabyking@chipflow.io>" },
]
license = {file = "LICENSE.md"}

requires-python = ">3.10.0,<3.14.0"
dependencies = [
  "amaranth[builtin-yosys]>=0.5.1",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest~=7.2.0",
]
lint = [
  "pycodestyle~=2.9.1",
  "autopep8~=2.0.0",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
#test.cmd = "pytest"
lint.cmd = "pycodestyle --config=./.pycodestyle rom/ upcounter/ sram/"
