# Project metadata

[project]
name = "chipflow-test-socs"
version = "0.0.0"
description = "ChipFlow test designs"
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io"},
    {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io"},
    {name = "Serge Rabyking", email = "serge.rabyking@chipflow.io"},
]
license = {file = "LICENSE.md"}

requires-python = ">=3.12,<3.14.0"
dependencies = [
  "amaranth[builtin-yosys]>=0.5.1",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git@v0.4.0",
]

[tool.uv]
package = false

[tool.uv.sources]
chipflow-lib = { path = "../chipflow-lib", editable = true }

# Development workflow configuration

[dependency-groups]
test = [
  "pytest~=7.2.0",
]
lint = [
  "pycodestyle~=2.9.1",
  "autopep8~=2.0.0",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
]
